# resumers

./: Cargo.toml  README.md  run_example.sh
docs/: index.html
docs/assets/: index-Cg4dlUxZ.css  index-Cv838pwJ.css  index-DNo_IKxN.js  index-qdY5UQlO.js  resumers_lib_bg-C5i3l3BK.wasm
examples/: John_Doe_resume.html  John_Doe_resume.md
src/: cli.rs  lib.rs  main.rs  resume.rs  types.rs
src/templates/: resume_html.hbs  resume_markdown.hbs
src/test_data/: test_input.json
src/types/: color.rs  email_address.rs  phone_number.rs  url.rs
webapp/: build.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webapp/src/: App.tsx  index.css
webapp/src/ui/: CertificationForm.tsx  EducationForm.tsx  ExperienceForm.tsx  PersonalInfoForm.tsx  ResumeForm.tsx  SkillsForm.tsx  StyleForm.tsx
webapp/src/utils/: resume.ts
