[package]
name = "resumers"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
color-eyre = "0.6"
printpdf = "0.5"
rusttype = "0.9"
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"

