[package]
name = "resumers"
version = "0.1.0"
edition = "2021"

[lib]
name = "resumers_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "resumers_cli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
clap = { version = "4.3", features = ["derive"] }
color-eyre = "0.6"
console_error_panic_hook = "0.1.7"
rusttype = "0.9"
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
serde_with = "3.9"
typeshare = "1"
wasm-bindgen = "0.2.92"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

